Fix price display on mobile; more W3C corrections

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 body {
 	margin: 15px; padding: 10px;
 	background-color: black;
-	font: 16px/230% "Tahoma" "Helvetica"  sans-serif;
+	font: 16px/230% Tahoma, Helvetica, sans-serif;
 	background: #66cc97; /* soft green with 60% white */
 
 	
@@ -74,7 +74,7 @@ h3 {
 h4 {
 	text-align: left;
 	margin: 0; padding: 3px;
-	font: 16px/125% 'Verdana' sans-serif;
+	font: 16px/125% Verdana, sans-serif;
 }
 
 /* Static Menu for desktop only */
